# discord-bot

./: README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  pull_request_conflict_check.yml
cogs/: general.py  moderation.py  voice.py
