[tool.poetry]
name = "discord bot"
version = "0.1.0"
description = ""
authors = ["SadeepaNHerath <sadeepahearth@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
discord-py = {extras = ["voice"], version = "^2.5.0"}
python-dotenv = "^1.0.1"
requests = "^2.32.3"
ffmpeg = "^1.4"
fastapi = "^0.115.8"
pyngrok = "^7.2.3"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
